# ethereum-data-syncer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: Alchemy-Ethereum.postman_collection.json  alchemy-note.md  references.md
src/: env.rs  lib.rs
src/alchemy/: blocks.rs  decoders.rs  eths.rs  mod.rs  rest_api.rs  rpc.rs  transactions.rs
