[package]
name = "ethereum-data-syncer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.15"
futures-util = "0.3"
dotenv = "0.15"
async-tungstenite = { version = "0.23.0", features = ["tokio-native-tls"] }
alloy = { version = "0.3", features = ["full"] }
eyre = "0.6.12"
chrono = { version = "0.4.31", default-features = false, features = [
  "serde",
  "clock",
  "std",
] }
anvil = "0.1.1"
alloy-node-bindings = "0.8.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
lazy_static = "1.4.0"
